Arquivos HTML e CSS

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-@import url(@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;900&display=swap');
 *{
     font-family: "Inter", sans-serif;
     margin: 0;
@@ -11,9 +11,70 @@
     --primary: #9E00FF;
     --secundary: #D4F8F8;
     --secundary-dark: #8EFEED;
-    --third: #0000;
-    --third-light: #ffff;
+    --black: #0000;
+    --white: #ffff;
 }
 header {
     display:flex;
+    border-bottom: 0.5rem solid var(--primary);
+    margin-bottom: 100px;
 }
+header picture img {
+    height: 5rem;
+}
+header nav {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+header nav ul {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+}
+header nav ul li {
+    margin: 0 1.5rem;
+}
+header nav ul li a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: var(--white);
+}
+main{
+    min-height: 70vh;
+}
+footer {
+    background-color: var(--primary);
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    margin: none;
+}
+.content {
+  width: 100%;
+  max-width: 1372px;
+  margin: 0 auto;
+}
+main picture img {
+    margin-top: 5rem;
+    height: 75%;
+    width: 40%;
+  }
+  .card {
+    background-color: var(--black);
+    border-radius: 0.5rem;
+    padding: 0.4rem;
+  }
+  .card > h4 {
+    margin-bottom: 0.5rem;
+  }
+  body {
+    background-color: #000;
+    }
+main section aside h4 {
+    font-size: 1.2rem;
+    color: var(--white);
+}
+h4 { text-align: center }
+
+
